Added category API
