# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'https://phythaph-web-app-new.herokuapp.com'
+    url: 'http://phythaph.herokuapp.com'
 paths:
   /api/auth/register:
     post:
@@ -62,19 +62,19 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: alias
+                  example: neque
                 last_name:
                   type: string
                   description: ''
-                  example: est
+                  example: placeat
                 email:
                   type: string
                   description: ''
-                  example: dicta
+                  example: dolorem
                 password:
                   type: string
                   description: ''
-                  example: ipsa
+                  example: et
               required:
                 - first_name
                 - last_name
@@ -136,11 +136,11 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: voluptatem
+                  example: odit
                 password:
                   type: string
                   description: ''
-                  example: voluptas
+                  example: sed
               required:
                 - email
                 - password
@@ -193,7 +193,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the verify.'
-        example: voluptatibus
+        example: iure
         required: true
         schema:
           type: string
@@ -248,7 +248,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the resend.'
-        example: tempore
+        example: ex
         required: true
         schema:
           type: string
@@ -307,7 +307,7 @@ paths:
                 email:
                   type: string
                   description: ''
-                  example: aut
+                  example: facere
               required:
                 - email
       security: []
@@ -370,11 +370,11 @@ paths:
                 token:
                   type: string
                   description: ''
-                  example: cum
+                  example: quo
                 password:
                   type: string
                   description: ''
-                  example: sit
+                  example: consequuntur
               required:
                 - email
                 - token
@@ -419,63 +419,63 @@ paths:
                 account_type:
                   type: string
                   description: optional
-                  example: accusantium
+                  example: sit
                 phone:
                   type: string
                   description: optional
-                  example: praesentium
+                  example: voluptates
                 gender:
                   type: string
                   description: optional
-                  example: maxime
+                  example: expedita
                 birthday:
                   type: date
                   description: optional
-                  example: quia
+                  example: dolorum
                 address:
                   type: string
                   description: optional
-                  example: quaerat
+                  example: ab
                 house_number:
                   type: string
                   description: optional
-                  example: sunt
+                  example: voluptas
                 street:
                   type: string
                   description: optional
-                  example: eum
+                  example: eos
                 lga:
                   type: string
                   description: optional
-                  example: odit
+                  example: nisi
                 lcda:
                   type: string
                   description: optional
-                  example: nostrum
+                  example: hic
                 company_name:
                   type: string
                   description: optional
-                  example: illum
+                  example: et
                 company_phone:
                   type: string
                   description: optional
-                  example: laudantium
+                  example: officia
                 country:
                   type: string
                   description: optional
-                  example: veniam
+                  example: placeat
                 postal_code:
                   type: string
                   description: optional
-                  example: vel
+                  example: fugit
                 city:
                   type: string
                   description: optional
-                  example: ipsa
+                  example: provident
                 state:
                   type: string
                   description: optional
-                  example: in
+                  example: quae
       security: []
   /api/auth/logout:
     get:
@@ -608,7 +608,198 @@ paths:
       tags:
         - 'Auth APIs'
       security: []
+  /api/categories:
+    get:
+      summary: 'Fetch Categories'
+      description: 'Get all categories'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: Ok
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n   \"success\": true,\n   \"message\": \"\",\n   \"data\": {\n      \"categories\": {\n          ...\n      }\n   }"
+        404:
+          description: 'User not found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  message: 'User not found'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: 'User not found'
+      tags:
+        - 'Category APIs'
+      security: []
+  /api/filter/currencies:
+    get:
+      summary: ''
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  current_page: 1
+                  data:
+                    -
+                      id: 1
+                      name: Naira
+                      iso: ngn
+                      exchange_rate: '0.00'
+                      created_at: '2022-08-16T20:11:48.000000Z'
+                      updated_at: '2022-08-16T20:11:48.000000Z'
+                    -
+                      id: 2
+                      name: Dollar
+                      iso: usd
+                      exchange_rate: '630.00'
+                      created_at: '2022-08-16T20:12:06.000000Z'
+                      updated_at: '2022-08-16T20:12:06.000000Z'
+                  first_page_url: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                  from: 1
+                  last_page: 1
+                  last_page_url: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                  links:
+                    -
+                      url: null
+                      label: '&laquo; Previous'
+                      active: false
+                    -
+                      url: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                      label: '1'
+                      active: true
+                    -
+                      url: null
+                      label: 'Next &raquo;'
+                      active: false
+                  next_page_url: null
+                  path: 'http://phythaph.herokuapp.com/api/filter/currencies'
+                  per_page: 10
+                  prev_page_url: null
+                  to: 2
+                  total: 2
+                properties:
+                  current_page:
+                    type: integer
+                    example: 1
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name: Naira
+                        iso: ngn
+                        exchange_rate: '0.00'
+                        created_at: '2022-08-16T20:11:48.000000Z'
+                        updated_at: '2022-08-16T20:11:48.000000Z'
+                      -
+                        id: 2
+                        name: Dollar
+                        iso: usd
+                        exchange_rate: '630.00'
+                        created_at: '2022-08-16T20:12:06.000000Z'
+                        updated_at: '2022-08-16T20:12:06.000000Z'
+                    items:
+                      type: object
+                  first_page_url:
+                    type: string
+                    example: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                  from:
+                    type: integer
+                    example: 1
+                  last_page:
+                    type: integer
+                    example: 1
+                  last_page_url:
+                    type: string
+                    example: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                  links:
+                    type: array
+                    example:
+                      -
+                        url: null
+                        label: '&laquo; Previous'
+                        active: false
+                      -
+                        url: 'http://phythaph.herokuapp.com/api/filter/currencies?page=1'
+                        label: '1'
+                        active: true
+                      -
+                        url: null
+                        label: 'Next &raquo;'
+                        active: false
+                    items:
+                      type: object
+                  next_page_url:
+                    type: string
+                    example: null
+                  path:
+                    type: string
+                    example: 'http://phythaph.herokuapp.com/api/filter/currencies'
+                  per_page:
+                    type: integer
+                    example: 10
+                  prev_page_url:
+                    type: string
+                    example: null
+                  to:
+                    type: integer
+                    example: 2
+                  total:
+                    type: integer
+                    example: 2
+      tags:
+        - Endpoints
+      security: []
 tags:
   -
     name: 'Auth APIs'
+    description: ''
+  -
+    name: 'Category APIs'
+    description: ''
+  -
+    name: Endpoints
     description: ''
